src/gfx/snapshots/emde__gfx__raster__tests__diagonal_half.snap
---
source: src/gfx/raster.rs
expression: shape(&r)
---
██████████████▀▀
████████████▀▀██
██████████▀▀████
████████▀▀██████
██████▀▀████████
████▀▀██████████
██▀▀████████████
▀▀██████████████
