src/gfx/snapshots/emde__gfx__raster__tests__disc_half.snap
---
source: src/gfx/raster.rs
expression: shape(&r)
---
   ▄▄██████▄▄   
 ▄████████████▄ 
▄██████████████▄
████████████████
████████████████
▀██████████████▀
 ▀████████████▀ 
   ▀▀██████▀▀
