src/gfx/snapshots/emde__gfx__raster__tests__disc_octant.snap
---
source: src/gfx/raster.rs
expression: shape(&r)
---
   𜷋𜷡▆████▆𜷞𜶻   
 𜷋𜷥██████████𜷤𜶻 
𜶖██████████████𜵈
████████████████
████████████████
𜴡██████████████𜴍
 𜴅𜶫██████████𜵰𜴂 
   𜴅𜴦🮅████🮅𜴗𜴂
